--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://code.iconify.design/iconify-icon/1.0.4/iconify-icon.min.js"></script>
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <title>Encriptador - Alura</title>
+        <title>Encriptador</title>
     </head>
 
     <body>
