se actualizan las referencias de las imagenes del sitio

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
         <header>
-            <h1><a href="index.html"><img src="imagenes/logo.png" alt="Logo de Alura" class="logo"></h1></a>
+            <h1><a href="index.html"><img src="Imagenes/Logo.png" alt="Logo de Alura" class="logo"></h1></a>
         </header>
 
         <main>
@@ -37,7 +37,7 @@
             
             <section>
                 <textarea type="text" id="encriptado" cols="30" rows="10"></textarea>
-                <img src="imagenes/muneco.png" alt="Persona buscando resultados" class="muneco">
+                <img src="Imagenes/Muneco.png" alt="Persona buscando resultados" class="muneco">
 
                 <div class="mensaje">
                     <h4>Ningun mensaje fue encontrado</h4>
